--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
-baseURL = 'https://stenz.dev/'
-languageCode = 'en-us'
+baseURL = 'https://michael.stenz.dev/'
+languageCode = 'de-at'
 title = 'Michael Stenz'
 theme = "poison"
 
