--- a/hugo.toml
+++ b/hugo.toml
@@ -8,11 +8,11 @@ theme = "poison"
 brand = "Michael Stenz"                      # name of your site - appears in the sidebar
 remote_brand_image = 'https://github.com/stenz123.png' # path to a remote file
 # brand_image = "/images/test.jpg"    # path to the image shown in the sidebar
-description = "Update this description..." # Used as default meta description if not specified in front matter
+description = "Hi there \\(°u°)/" # Used as default meta description if not specified in front matter
 dark_mode = true                      # optional - defaults to false
 # favicon = "favicon.png"             # path to favicon (defaults to favicon.png)
 
-front_page_content = ["posts"] # Equivalent to the default value, add page bundle names to include them on the front page.
+front_page_content = ["about"] # Equivalent to the default value, add page bundle names to include them on the front page.
 
 # MENU PLACEHOLDER
 # Menu dict keys:
@@ -22,15 +22,16 @@ front_page_content = ["posts"] # Equivalent to the default value, add page bundl
 # Limit:        If the files should be listed, how many should be shown.
 menu = [
     {Name = "About", URL = "/about/", HasChildren = false},
-    {Name = "Posts", URL = "/posts/", Pre = "Recent", HasChildren = true, Limit = 5},
+    {Name = "Projects", URL = "/projects/", HasChildren = true, Limit = 5},
+    {Name = "Posts", URL = "/posts/", HasChildren = false},
 ]
 
 # Links to your socials.  Comment or delete any you don't need/use.
 github_url = "https://github.com/stenz123"
-linkedin_url = "https://linkedin.com"
+linkedin_url = "https://www.linkedin.com/in/michael-stenz-00b3a1258/"
 
 # NOTE: If you don't want to use RSS, comment or delete the following lines
 # Adds an RSS icon to the end of the socials which links to {{ .Site.BaseURL }}/index.xml
-rss_icon = true
+rss_icon = false
 # Which section the RSS icon links to, defaults to all content. See https://gohugo.io/templates/rss/#section-rss
 rss_section = "posts"
